Fix z-index conflicting with credits on smallish screen.s

--- a/default_style.css
+++ b/default_style.css
@@ -14,6 +14,7 @@ div[id=gameView] {
     margin-top: -300px;
     margin-left: -400px;
     border: 1px solid #000000;
+    z-index: 1;
 }
 
 div[id="header"] {
